--- a/src/styles/extends.css
+++ b/src/styles/extends.css
@@ -4,3 +4,4 @@
 @import './components/navbar.css';
 @import './components/header.css';
 @import './components/about.css';
+@import './components/skills.css';
