style: adiciona estilos da seção Projetos

--- a/src/styles/extends.css
+++ b/src/styles/extends.css
@@ -5,3 +5,4 @@
 @import './components/header.css';
 @import './components/about.css';
 @import './components/skills.css';
+@import './components/projects.css';
