style: adiciona estilos do footer

--- a/src/styles/extends.css
+++ b/src/styles/extends.css
@@ -6,3 +6,4 @@
 @import './components/about.css';
 @import './components/skills.css';
 @import './components/projects.css';
+@import './components/footer.css';
