--- a/src/styles/extends.css
+++ b/src/styles/extends.css
@@ -7,3 +7,12 @@
 @import './components/skills.css';
 @import './components/projects.css';
 @import './components/footer.css';
+.visually-hidden {
+  position: absolute !important;
+  width: 1px; height: 1px; padding: 0; margin: -1px;
+  overflow: hidden; clip: rect(0,0,0,0); white-space: nowrap; border: 0;
+}
+
+body, .navbar, header, section, footer {
+  transition: background-color .25s ease, color .25s ease, border-color .25s ease, box-shadow .25s ease;
+}
